--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,10 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+---
+admin:
+  name: 'Admin'
+  email: 'admin@primus-fatum.de'
+  encrypted_password: 'admin123'
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+user:
+  name: 'User'
+  email: 'user@primus-fatum.de'
+  encrypted_password: 'user123'
